--- a/sinaPatent/templates/PatentMS/base_model.html
+++ b/sinaPatent/templates/PatentMS/base_model.html
@@ -43,8 +43,12 @@
         <a class='nav-link'
             href="{% url 'restricted' %}">限制</a></li>
     <li class='nav-item'>
-        <a class='nav-link'
-            href="{% url 'auth_logout'%}?next=/index/">登出</a></li>
+        <form method="post" action="{% url 'auth_logout' %}" style="display: inline;">
+            {% csrf_token %}
+            <input type="hidden" name="next" value="{% url 'index' %}">
+            <button type="submit" class="nav-link btn btn-link" style="border: none; background: none; padding: 0.5rem 1rem;">登出</button>
+        </form>
+    </li>
     <li class='nav-item'>
         <a class='nav-link'
             href="{% url 'add_category' %}">添加分类</a></li>
